syntax = "proto3";

import "zitadel/object.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package zitadel.group.v1;

option go_package ="github.com/zitadel/zitadel/pkg/grpc/group";

message Group {
    string id = 1 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"78629023905388335\""
        }
    ];
    zitadel.v1.ObjectDetails details = 2;
    string name = 3 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"Group\""
        }
    ];
    string description = 4 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"Group Description\""
        }
    ];
    GroupState state = 5 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "current state of the group";
        }
    ];
}

message GroupGrant {
    string id = 1 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"78629023905388335\""
        }
    ];
    zitadel.v1.ObjectDetails details = 2;
    repeated string role_keys = 3 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "[\"role.super.man\"]"
        }
    ];
    GroupGrantState state = 4 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "current state of the user";
        }
    ];
    
    string group_id = 5 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"78629023905388335\""
        }
    ];
    string group_name = 6 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"gigi-giraffe\"";
        }
    ];
    string project_id = 7 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"78629023905388335\""
        }
    ];
    string project_name = 8 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"ZITADEL\"";
        }
    ];
    string project_grant_id = 9 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"78629023905388335\""
        }
    ];
    string granted_org_id = 10 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"78629023905388335\""
        }
    ];
    string granted_org_name = 11 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"ZITADEL\"";
        }
    ];
    string granted_org_domain = 12 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"zitadel.cloud\"";
        }
    ];
}

enum GroupState {
    GROUP_STATE_UNSPECIFIED = 0;
    GROUP_STATE_ACTIVE = 1;
    GROUP_STATE_INACTIVE = 2;
}

enum GroupGrantState {
    GROUP_GRANT_STATE_UNSPECIFIED = 0;
    GROUP_GRANT_STATE_ACTIVE = 1;
    GROUP_GRANT_STATE_INACTIVE = 2;
}

message GroupGrantQuery {
    oneof query {
        option (validate.required) = true;

        GroupGrantProjectIDQuery project_id_query = 1;
        GroupGrantGroupIDQuery group_id_query = 2;
        GroupGrantWithGrantedQuery with_granted_query = 3;
        GroupGrantRoleKeyQuery role_key_query = 4;
        GroupGrantProjectGrantIDQuery project_grant_id_query = 5;
        GroupGrantGroupNameQuery group_name_query = 6;
        // GroupGrantFirstNameQuery first_name_query = 7;
        // GroupGrantLastNameQuery last_name_query = 8;
        // GroupGrantEmailQuery email_query = 9;
        GroupGrantOrgNameQuery org_name_query = 7;
        GroupGrantOrgDomainQuery org_domain_query = 8;
        GroupGrantProjectNameQuery project_name_query = 9;
        // GroupGrantDisplayNameQuery display_name_query = 13;
        // GroupGrantUserTypeQuery user_type_query = 14;
    }
}

message GroupGrantGroupIDQuery {
    string group_id = 1 [
        (validate.rules).string = {max_len: 200},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"78629023905388335\""
        }
    ];
}

message GroupGrantProjectIDQuery {
    string project_id = 1 [
        (validate.rules).string = {max_len: 200},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"78629023905388335\""
        }
    ];
}

message GroupGrantUserIDQuery {
    string user_id = 1 [
        (validate.rules).string = {max_len: 200},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"78629023905388335\""
        }
    ];
}

message GroupGrantWithGrantedQuery {
    bool with_granted = 1;
}

message GroupGrantRoleKeyQuery {
    string role_key = 1 [
        (validate.rules).string = {max_len: 200},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"role.super.man\""
        }
    ];
    zitadel.v1.TextQueryMethod method = 2 [
        (validate.rules).enum.defined_only = true,
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "defines which text equality method is used"
        }
    ];
}

message GroupGrantProjectGrantIDQuery {
    string project_grant_id = 1 [
        (validate.rules).string = {max_len: 200},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"78629023905388335\""
        }
    ];
}

message GroupGrantGroupNameQuery {
    string Group_name = 1 [
        (validate.rules).string = {max_len: 200},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"gigi-giraffe\""
        }
    ];
    zitadel.v1.TextQueryMethod method = 2 [
        (validate.rules).enum.defined_only = true,
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "defines which text equality method is used"
        }
    ];
}

message GroupGrantOrgNameQuery {
    string org_name = 1 [
        (validate.rules).string = {max_len: 200},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"cao\""
        }
    ];
    zitadel.v1.TextQueryMethod method = 2 [
        (validate.rules).enum.defined_only = true,
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "defines which text equality method is used"
        }
    ];
}

message GroupGrantOrgDomainQuery {
    string org_domain = 1 [
        (validate.rules).string = {max_len: 200},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"OS AG\""
        }
    ];
    zitadel.v1.TextQueryMethod method = 2 [
        (validate.rules).enum.defined_only = true,
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "defines which text equality method is used"
        }
    ];
}

message GroupGrantProjectNameQuery {
    string project_name = 1 [
        (validate.rules).string = {max_len: 200},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"ITADE\""
        }
    ];
    zitadel.v1.TextQueryMethod method = 2 [
        (validate.rules).enum.defined_only = true,
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "3"
        }
    ];
}

message GroupQuery {
    oneof query {
        option (validate.required) = true;

        GroupNameQuery name_query = 1;
        GroupResourceOwnerQuery group_resource_owner_query = 2;
    }
}

message GroupNameQuery {
    string name = 1 [
        (validate.rules).string = {max_len: 200},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"ZITADEL\""
        }
    ];
    zitadel.v1.TextQueryMethod method = 2 [
        (validate.rules).enum.defined_only = true,
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "defines which text equality method is used"
        }
    ];
}

message GroupResourceOwnerQuery {
    string resource_owner = 1 [
        (validate.rules).string = {max_len: 200},
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            example: "\"78629023905388335\""
        }
    ];
}